# cascade

./: .ocamlformat  CHANGES.md  CLAUDE.md  LICENSE  README.md  TODO.md  cascade.opam  dune-project  homebrew.yml
.github/workflows/: ci.yml
fuzz/: dune  fuzz_font_face.ml  fuzz_keyframe.ml  fuzz_reader.ml  fuzz_selector.ml  fuzz_stylesheet.ml  fuzz_supports.ml  fuzz_values.ml
lib/: css.mli  dune  properties.ml  properties.mli  properties_intf.ml  stylesheet.ml  stylesheet.mli  variables.ml
lib/info/: cascade_info.ml  cascade_info.mli  dune
lib/tools/: css_compare.ml  css_compare.mli  dune  string_diff.ml  string_diff.mli  tree_diff.ml  tree_diff.mli
scripts/: check_api_consistency.ml  check_properties.ml  dune
test/: dune  spec.ml  spec.mli  test.ml  test_container.ml  test_css.ml  test_css_compare.ml  test_declaration.ml  test_font_face.ml  test_keyframe.ml  test_media.ml  test_optimize.ml  test_pp.ml  test_properties.ml  test_reader.ml  test_selector.ml  test_string_diff.ml  test_stylesheet.ml  test_supports.ml  test_tree_diff.ml  test_values.ml  test_variables.ml
test/examples/: dune  empty_tailwind.css
test/helpers/: css_test_helpers.ml  css_test_helpers.mli  dune
test/spec/: dune  test.ml
